# peakstar-mcpguard

./: .gitignore  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/dangerous/: mcp.json
examples/report/: report.html  report.json
examples/report-en/: report.html  report.json
examples/report-safe/: report.html  report.json
examples/safe/: mcp.json
peakstar_mcpguard/: __init__.py  analyze.py  checks.py  cli.py  detect.py  i18n.py  parse.py  report.py  rulepack.py
peakstar_mcpguard/_vendor/: __init__.py
peakstar_mcpguard/cve/: snapshot.json
peakstar_mcpguard/rulepacks/basic/: rules.json
scripts/: sync_common.py
tests/: test_mcpguard.py
